# gold-and-gallows

./: .gitignore  README.md  generate_docs.sh  pyproject.toml  run_tests.sh
JSON/: monster_statistics_by_hit_dice.json
Python/: camera_functions.py  character_creation.py  character_statistics.py  dialogue_manager.py  entity.py  entity_factory.py  entity_instances.py  global_constants.py  main.py  player_functions.py  pyproject.toml  run_tests.sh  state_machines.py  text_handling.py
Python/DialogueTrees/: guy1_dialogue_tree.py
Python/tests/: test_main.py
docs/: conf.py  index.rst
docs/modules/: src.gng.artists.character_creator_artist.rst  src.gng.artists.character_sheet_artist.rst  src.gng.artists.debugging_artist.rst  src.gng.artists.dialogue_artist.rst  src.gng.artists.game_world_artist.rst  src.gng.camera_functions.rst  src.gng.dice_roller.rst  src.gng.entities_and_components.rst  src.gng.entity_instances.rst  src.gng.event_handlers.character_creator_event_handler.rst  src.gng.event_handlers.character_sheet_event_handler.rst  src.gng.event_handlers.debugging_event_handler.rst  src.gng.event_handlers.dialogue_event_handler.rst  src.gng.event_handlers.manual_controls_event_handler.rst  src.gng.event_handlers.pygame_event_handler.rst  src.gng.global_constants.rst  src.gng.main.rst  src.gng.managers.character_statistics.rst  src.gng.managers.clock_manager.rst  src.gng.managers.manual_controls.rst  (+9 more)
tests/: create_test_methods.py  test_clock_manager.py  test_dice_roller.py  test_entities_and_components.py  test_main.py  test_turns_manager.py  test_verifying_json.py
(+77 files in other folders)
